--- a/css/dss.css
+++ b/css/dss.css
@@ -18,7 +18,7 @@ body{
 
 .navbar .navbar-collapse ul li .nav-link img{
     width: 30px;
-    margin-top: 8px;
+    margin-top: 9px;
 }
 
 .dropdown-menu{
@@ -188,7 +188,7 @@ option {
 form .form-body select{
     direction: rtl;  
     background-color: #ffffff;
-    border-radius: 25px;
+    border-color: white;
     cursor: pointer;
     padding-bottom: 10px;
     padding:6px 12px;
@@ -212,7 +212,7 @@ form .form-body sup{
 }
 
 form .form-body input[type="text"]{
-    border-radius: 25px;
+    
     padding-right: 20px;
     padding-left: 20px;
     border: 1px solid #ffffff;
